# py-return-success-or-error

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
doc_dev/: PLANO_MODERNIZACAO_V1.md
docs/: index.md
docs/api/: core.md  datasources.md  errors.md  parameters.md  repositories.md  usecases.md
samples/: README.md  main.py
samples/composition/: container.py  feature_registration.py
samples/features/check_connection/: __init__.py  datasources.py  errors.py  register.py  repositories.py  services.py  usecases.py
samples/features/check_connection/datasources/: fake_connectivity_datasource.py
samples/features/check_connection/domain/: errors.py  services.py  usecases.py
samples/features/check_connection/repositories/: check_connection_repository.py
samples/features/check_connection/services/: check_connection_service.py
samples/features/fibonacci/: __init__.py  errors.py  register.py  services.py  usecases.py
samples/features/fibonacci/domain/: errors.py  parameters.py  services.py  usecases.py
samples/features/fibonacci/services/: fibonacci_service.py
samples/features/sales_report/: __init__.py  datasources.py  errors.py  register.py  repositories.py  services.py  usecases.py
samples/features/sales_report/datasources/: csv_sales_datasource.py  in_memory_sales_datasource.py
src/py_return_success_or_error/: __init__.py  imports.py
src/py_return_success_or_error/bases/: usecase_base.py
src/py_return_success_or_error/core/: __init__.py  empty.py  nil.py  return_success_or_error.py  unit.py
src/py_return_success_or_error/datasources/: __init__.py  datasource.py
src/py_return_success_or_error/errors/: __init__.py  app_error.py  error_generic.py
src/py_return_success_or_error/interfaces/: app_error.py  datasource.py  parameters_return_result.py
src/py_return_success_or_error/mixins/: repository_mixin.py  thread_mixin.py
src/py_return_success_or_error/parameters/: __init__.py  no_params.py  parameters.py
src/py_return_success_or_error/repositories/: __init__.py  repository.py  repository_base.py
src/py_return_success_or_error/usecases/: __init__.py  usecase_base.py  usecase_base_call_data.py  usecase_executor_base.py
tests/: public_api_test.py
tests/core/: nil_test.py  return_success_or_error_test.py  unit_test.py
tests/datasources/: datasource_test.py
tests/errors/: app_error_test.py
tests/helpers/: __init__.py  assertions.py  auxiliares.py  auxiliares_mock.py  test_errors.py
tests/parameters/: parameters_test.py
tests/py_return_success_or_error/bases/: usecase_base_test.py
tests/py_return_success_or_error/core/: empty_test.py  return_success_or_error_test.py
tests/py_return_success_or_error/interfaces/: app_error_test.py  datasource_test.py  parameters_return_result_test.py
tests/repositories/: repository_base_test.py
tests/usecases/: usecase_base_call_data_test.py  usecase_base_test.py
(+7 files in other folders)
