[project]
name = "py-return-success-or-error"
version = "1.0.0rc1"
description = "Result/Either com erro fechado por feature para Clean Architecture em Python: DataSource → Repository → Usecase, async-first, zero dependências."
readme = "README.md"
authors = [
    { name = "pwlimaverde", email = "pwlimaverde@gmail.com" }
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: Portuguese (Brazilian)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = []

[project.urls]
Documentation = "https://py-return-success-or-error.readthedocs.io/pt-br/latest/"
Repository = "https://github.com/pwlimaverde/py-return-success-or-error"
Issues = "https://github.com/pwlimaverde/py-return-success-or-error/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "rich>=13.9.4",
    "ruff>=0.9.1",
    "taskipy>=1.14.1",
]
doc = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.50",
    "mkdocstrings>=0.27.0",
    "mkdocstrings-python>=1.13.0",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["py_return_success_or_error"]
known-local-folder = ["composition", "features"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests", "samples"]
mypy_path = "src"

[tool.taskipy.tasks]
lint = "ruff check src tests samples"
format = "ruff check --fix src tests samples && ruff format src tests samples"
typecheck = "mypy"
test = "pytest -x -s -vv"
docs = "mkdocs serve"
samples = "python samples/main.py"
